# mlops-classes-lab

./: .gitignore  README.md  pyproject.toml  questions.txt  run_pipeline.sh
data/interim/: train_preprocessed.parquet
scripts/: evaluate.py  featurize.py  predict.py  preprocess.py  train.py
src/mlops_pkg/: __init__.py
src/mlops_pkg/features/: base_features_computer.py  features_computer.py
src/mlops_pkg/models/: base_model.py  logistic_regression.py  random_forest.py  xgboost_model.py
src/mlops_pkg/preprocessing/: base_preprocessor.py  preprocessor.py
